feat: compare global App Store prices with scoped queries and cloud deployment